# FHC_MLE_Flavor

./: .coveragerc  .editorconfig  .pre-commit-config.yaml  CHANGELOG.md  LICENSE.txt  Makefile  README.md  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: ci.yml
docs/: requirements.txt
docs/source/: conf.py  index.rst
requirements/: dev.txt  test.txt
src/: Flavor Analysis.ipynb  PCA.py  cli.py  dangerous.py  flavor_analysis.py  rafa_flavor_analysis.ipynb  sample.py
src/pytemplate/: __main__.py
tests/: sample_test.py
