[bumpversion]
current_version = 0.1.1
parse = ^
	(?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)
	((?P<prekind>dev|a|b|rc)
	(?P<pre>\d+)
	)?
	(\.(?P<postkind>post)(?P<post>\d+))?
serialize =
	{major}.{minor}.{patch}{prekind}{pre}.{postkind}{post}
	{major}.{minor}.{patch}{prekind}{pre}
	{major}.{minor}.{patch}.{postkind}{post}
	{major}.{minor}.{patch}
commit = False
tag = False

[metadata]
name = PyTemplate
version = attr:pytemplate.__version__
description = Python template project
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/brsolomon/py-template
author = Deloitte Consulting LLP
author_email = 81818815+brsolomon@users.noreply.github.com
license = Proprietary
license_file = LICENSE.txt
classifiers =
	Development Status :: 3 - Alpha
	Intended Audience :: Developers
	Programming Language :: Python :: Implementation :: CPython
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3 :: Only
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
project_urls =
	Source = https://github.com/brsolomon/py-template
	Bug Reports = https://github.com/brsolomon/py-template/issues

[options]
packages = find:
install_requires =
	importlib_resources;python_version<"3.7"
	click==7.1.*
	requests==2.*
python_requires = >=3.6
include_package_data = True
package_dir =
	=src

[options.entry_points]
console_scripts =
	hello = pytemplate.cli:hello

[options.packages.find]
where = src

[bumpversion:part:prekind]
optional_value = _
values =
	_
	dev
	a
	b
	rc

[bumpversion:part:postkind]
optional_value = _
values =
	_
	post

[bumpversion:file:docs/source/conf.py]

[bumpversion:file:src/pytemplate/__init__.py]

[flake8]
max-line-length = 119
exclude =
	venv/
	htmlcov/
	.pytype/
	.tox/

[isort]
profile = black
skip_gitignore = True

[mypy]
python_version = 3.8
warn_unused_configs = True
files =
	src/pytemplate

[pytype]
python_version = 3.8
inputs =
	src/pytemplate
